--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
 <body>
 
     <div class="contenedor">
-            <div class="cubo1"> 
-            </div>
-            <div class="cubo2"> 
-            </div>
-            <div class="cubo3"> 
-            </div>
+            <div class="cuadrado rojo" onclick="cambiarFondo('red')"></div>
+            <div class="cuadrado verde"onclick="cambiarFondo('green')"></div>
+            <div class="cuadrado azul" onclick="cambiarFondo('blue')"></div>
     </div>
 
 
